--- a/windlot/package.json
+++ b/windlot/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.6",
+    "aws-amplify": "^3.3.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
