--- a/infrastructure/jenkins-values.yaml
+++ b/infrastructure/jenkins-values.yaml
@@ -200,6 +200,7 @@ controller:
   additionalPlugins:
     - job-dsl:1.77
     - github:1.32.0
+    - pipeline-utility-steps:2.6.1
 
   # Enable to initialize the Jenkins controller only once on initial installation.
   # Without this, whenever the controller gets restarted (Evicted, etc.) it will fetch plugin updates which has the potential to cause breakage.
