--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,13 +5,13 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      - npm install
+      - cd windlot && npm install
   build:
     commands:
-      - npm run-script build
+      - cd windlot && npm run-script build
 
 artifacts:
-  base-directory: ./build
+  base-directory: ./windlot/build
   files:
     - '**/*'
 
