--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,6 +9,7 @@ phases:
   build:
     commands:
       - npm run-script build
+      - cp ../appspec.yml ./build/appspec.yml
 
 artifacts:
   base-directory: ./windlot/build
