--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,26 @@ version: 0.0
 os: linux
 files:
   - source: '.'
-    destination: /webapps/windlot
+    destination: /home/webapps/windlot
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
+  
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
+
+  ApplicationStart:
+    - location: scripts/app_start.sh
+      timeout: 300
+      runas: root
