--- a/appspec.yml
+++ b/appspec.yml
@@ -4,11 +4,11 @@ files:
   - source: '.'
     destination: /home/webapps/windlot
 
-permissions:
-  - object: /
-    pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+# permissions:
+#   - object: /
+#     pattern: "**"
+#     owner: ec2-user
+#     group: ec2-user
 
 hooks:
   BeforeInstall:
