--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
       - cp ../appspec.yml ./build/appspec.yml
       - cp -r ../scripts ./build/scripts/
       - cp package.json ./build/package.json
-      - copy -r node_modules/ ./build/node_modules/
+      - cp -r node_modules/ ./build/node_modules/
 
 artifacts:
   base-directory: ./windlot/build
