--- a/windlot/package.json
+++ b/windlot/package.json
@@ -15,8 +15,11 @@
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.6",
     "aws-amplify": "^3.3.14",
+    "markdown-to-jsx": "^7.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
+    "react-parallax": "^3.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
