--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -40,9 +40,12 @@ Resources:
         Statement:
           -
             Effect: "Allow"
-            Principal: "*"
+            Principal:
+              AWS:
+                - !Sub "arn:aws:sts::${AWS::AccountId}:assumed-role/${ListingIndexerFunctionRole}/ListingIndexerFunction-${Environment}"
+                - !Sub "arn:aws:sts::${AWS::AccountId}:assumed-role/${ListingSearchFunctionRole}/ListingSearchFunction-${Environment}"
             Action: "es:*"
-            Resource: "*" # FIX ME 
+            Resource: !Sub "arn:aws:es:${AWS::Region}:domain/listings-${Environment}/*"
 
   ApiGatewayApi:
     Type: AWS::Serverless::Api
@@ -56,17 +59,65 @@ Resources:
       # Domain:
       #   DomainName: notification.i.deadhands.io
       #   CertificateArn: !Sub "arn:aws:acm:us-east-1:${AWS::AccountId}:certificate/${CertificateId}"
-      #   EndpointConfiguration: EDGE        
+      #   EndpointConfiguration: EDGE
+
+  ListingIndexerFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement: 
+          - 
+            Effect: "Allow"
+            Principal: 
+              Service: 
+                - "lambda.amazonaws.com"
+            Action: 
+              - "sts:AssumeRole"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AWSLambdaExecute
+      Policies:
+        - PolicyName: !Sub "SearchIndexerPolicy-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:GetObjectACL
+                  - s3:ListBucket
+                  - s3:PutObject
+                Resource: 
+                  - Fn::Sub:
+                      - "arn:aws:s3:::${bucketName}"
+                      - bucketName: 
+                          Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
+                  - Fn::Sub:
+                      - "arn:aws:s3:::${bucketName}/*"
+                      - bucketName:
+                          Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
+        - PolicyName: !Sub "SearchIndexerPolicy-ES-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - es:ESHttpPost
+                  - es:ESHttpGet
+                Resource: 
+                  - !Sub "arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/listings-${Environment}"
 
   ListingIndexerFunction:
     Type: AWS::Serverless::Function
     DependsOn: ElasticsearchDomain
     Properties:
+      FunctionName: !Sub "ListingIndexerFunction-${Environment}"
       CodeUri: function.zip
       PackageType: Zip
       Handler: app.lambda_handler
       Runtime: python3.8
       Timeout: 180
+      Role: !GetAtt ListingIndexerFunctionRole.Arn
       Environment:
         Variables:
           ElasticsearchDomain: !GetAtt ElasticsearchDomain.DomainEndpoint
@@ -79,25 +130,74 @@ Resources:
             RestApiId: !Ref ApiGatewayApi
             Auth:
               Authorizer: CognitoAuth
+
+  ListingSearchFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement: 
+          - 
+            Effect: "Allow"
+            Principal: 
+              Service: 
+                - "lambda.amazonaws.com"
+            Action: 
+              - "sts:AssumeRole"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AWSLambdaExecute
       Policies:
-        - AWSLambdaExecute
-        - Version: '2012-10-17' 
-          Statement:
-            - Effect: Allow
-              Action:
-                - s3:GetObject
-                - s3:GetObjectACL
-                - s3:ListBucket
-                - s3:PutObject
-              Resource: 
-                - Fn::Sub:
-                    - "arn:aws:s3:::${bucketName}"
-                    - bucketName: 
-                        Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
-                - Fn::Sub:
-                    - "arn:aws:s3:::${bucketName}/*"
-                    - bucketName:
-                        Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
+        - PolicyName: !Sub "SearchPolicy-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:GetObjectACL
+                  - s3:ListBucket
+                  - s3:PutObject
+                Resource: 
+                  - Fn::Sub:
+                      - "arn:aws:s3:::${bucketName}"
+                      - bucketName: 
+                          Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
+                  - Fn::Sub:
+                      - "arn:aws:s3:::${bucketName}/*"
+                      - bucketName:
+                          Fn::ImportValue: !Sub "${S3SourceBucketStackName}-BucketName"
+        - PolicyName: !Sub "SearchPolicy-ES-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - es:ESHttpPost
+                Resource: 
+                  - !Sub "arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/listings-${Environment}"
+
+  ListingSearchFunction:
+    Type: AWS::Serverless::Function
+    DependsOn: ElasticsearchDomain
+    Properties:
+      FunctionName: !Sub "ListingSearchFunction-${Environment}"
+      CodeUri: search_function.zip
+      PackageType: Zip
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Timeout: 180
+      Role: !GetAtt ListingSearchFunctionRole.Arn
+      Environment:
+        Variables:
+          ElasticsearchDomain: !GetAtt ElasticsearchDomain.DomainEndpoint
+      Events:
+        Notification:
+          Type: Api 
+          Properties:
+            Path: /search
+            Method: post
+            RestApiId: !Ref ApiGatewayApi
+
 
 
 
