--- a/windlot/package.json
+++ b/windlot/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-images-upload": "^1.2.8",
     "react-parallax": "^3.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
