Add contact ability to the listing details page. Add backend storage.

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -346,7 +346,79 @@ Resources:
             Method: post
             RestApiId: !Ref ApiGatewayApi
 
+  ContactDynamoTable:
+    Type: AWS::DynamoDB::Table
+    Properties: 
+      BillingMode: PAY_PER_REQUEST
+      TableName: hunterContacts
+      AttributeDefinitions:
+        -
+          AttributeName: "ContactID"
+          AttributeType: "S"
+      KeySchema:
+        - 
+          AttributeName: "ContactID"
+          KeyType: "HASH"
 
+  ContactFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement: 
+          - 
+            Effect: "Allow"
+            Principal: 
+              Service: 
+                - "lambda.amazonaws.com"
+            Action: 
+              - "sts:AssumeRole"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AWSLambdaExecute
+      Policies:
+        - PolicyName: !Sub "ContactPolicy-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - dynamodb:Query
+                  - dynamodb:PutItem
+                Resource: 
+                  - !GetAtt ContactDynamoTable.Arn
+        - PolicyName: !Sub "GetPolicy-ES-${Environment}"
+          PolicyDocument:
+            Version: '2012-10-17' 
+            Statement:
+              - Effect: Allow
+                Action:
+                  - es:ESHttpGet
+                Resource: 
+                  - !Sub "arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/listings-${Environment}"
+                  - !Sub "arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/listings-${Environment}/*"
+
+  ContactFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "ContactFunction-${Environment}"
+      CodeUri: contact_function.zip
+      PackageType: Zip
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Timeout: 180
+      Role: !GetAtt ContactFunctionRole.Arn
+      Environment:
+        Variables:
+          HUNTERCONTACTS_TABLE: !Ref ContactDynamoTable
+          ElasticsearchDomain: !GetAtt ElasticsearchDomain.DomainEndpoint
+      Events:
+        Notification:
+          Type: Api 
+          Properties:
+            Path: /contact
+            Method: post
+            RestApiId: !Ref ApiGatewayApi
+  
 
 
 # Outputs:
