Fix formatting issues. Fix Timezone issues with availability dates.

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -345,6 +345,8 @@ Resources:
             Path: /upload
             Method: post
             RestApiId: !Ref ApiGatewayApi
+            Auth:
+              Authorizer: CognitoAuth
 
   ContactDynamoTable:
     Type: AWS::DynamoDB::Table
